# AnnoyingProcessKiller

./: .gitignore  Cargo.toml  README.md  build.rs
AnnoyingProcessKiller/: Cargo.toml  build.rs
AnnoyingProcessKiller/src/: main.rs  utils.rs
WMI_Query/: Cargo.toml
WMI_Query/src/: ObjectWrapper.rs  Win32_Process.rs  event_sink.rs  lib.rs  types.rs  utils.rs
src/: main.rs
