[package]
name = "process-killer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
OriginalFilename = "PROCESS-KILLER.EXE"
FileDescription = "Annoying Process Killer"

[build-dependencies]
winres = "0.1.12"

[dependencies]
serde_json = "1.0"
lazy_static = "1.4.0"
async-channel = "1.6.1"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
ctrlc = "3.2.1"
futures = { version = "0.3.21", features=["executor"] }
WMI_Query = { path = "../WMI_Query" }

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_Wmi"
]

[profile.release]
lto = true
codegen-units = 1
strip = true
