[package]
name = "WMI_Query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
thiserror = "1.0.30"
log = "0.4.14"
enumn = "0.1.3"

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_System_Wmi",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_Foundation",
    "Win32_Security",
    "interface",
    # workaround https://github.com/microsoft/windows-rs/pull/1612
    "implement"
]

[profile.release]
lto = true
codegen-units = 1
strip = true
